# lil

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
docs/source/: conf.py  index.rst
include/: CMakeLists.txt
include/lil/: Assert.hpp  Binary.hpp  Err.hpp  Interval.hpp  Str.hpp
include/lil/detail/: IArr.hpp  LilConf.h
src/: CMakeLists.txt
src/lil/: Err.cpp
tests/: Binary.test.cpp  CMakeLists.txt  Str.test.cpp
tools/cmake/docs/: conf.py  index.rst
tools/cmake/modules/: BaseProject.cmake  BaseProject.pc.in  BaseProjectConfig.cmake.in  EmbeddedSystem.cmake  FindBuildConfType.cmake  FindCCache.cmake  FindCompilerTracing.cmake  FindDebugger.cmake  FindDocumentation.cmake  FindFreeRTOS.cmake  FindLinker.cmake  FindModule.in.cmake  FindMutationTesting.cmake  FindProfileGuidedOptimization.cmake  FindPythonVEnv.cmake  FindPythonVenv.cmake  FindSRecord.cmake  FindSanitizers.cmake  FreeRTOSConfig.h  FreeRTOSConfigDefaults.c  InstallPackage.cmake  PkgConfigGenerator.cmake  TempDir.cmake  Weaken.cmake
